# mcp-rust-starter

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml  server.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  conformance.yml  copilot-setup-steps.yml  mcp-diff.yml
src/: icons.rs  lib.rs  prompts.rs  resources.rs  tools.rs
