[package]
name = "mcp-rust-starter"
version = "1.0.0"
edition = "2021"
description = "A feature-complete MCP server starter template in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SamMorrowDrums/mcp-rust-starter"
keywords = ["mcp", "model-context-protocol", "ai", "llm"]

[[bin]]
name = "mcp-rust-starter-stdio"
path = "src/bin/stdio.rs"

[dependencies]
# Official MCP Rust SDK (rmcp) - https://crates.io/crates/rmcp
# Using 0.11.0 for Rust 1.87 compatibility (0.12 requires Rust 1.88)
rmcp = { version = "0.11", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.2.0"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
